gcc/testsuite/rust/rustc/ui/parser/issues/issue-81806.rs
trait T { const
impl // { dg-error "" "" { target *-*-* } }
}

fn main() {}

